# ska-src-maltopuft-etl

./: .env.example  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  Dockerfile.atnf  Dockerfile.dagster  Dockerfile.meertrap  Makefile  README.md  dagster.yaml  docker-compose.yaml  entrypoint.sh  new_load.py  pyproject.toml  workspace.yaml
cfg/: config.default.yml
docker/: Dockerfile.dagster  dagster.yaml  docker-compose.azimuth.yaml  docker-compose.yaml  workspace.yaml
docs/: Makefile
docs/src/: conf.py  index.rst
docs/src/pages/: atnf.rst  maltopuft-etl.rst  meertrap.rst
src/dagster/atnf/: assets.py  definitions.py
src/pipelines/: definitions.py
src/pipelines/atnf/: assets.py
src/pipelines/meertrap/: assets.py  definitions.py
src/ska_src_maltopuft_etl/: __init__.py  main.py
src/ska_src_maltopuft_etl/atnf/: __init__.py  atnf.py  main.py  params.py  targets.py
src/ska_src_maltopuft_etl/click/: __init__.py  delete_empty_cand_dirs.py  reorg_cand_dir.py  untar_directory.py
src/ska_src_maltopuft_etl/core/: __init__.py  config.py  database.py  database_loader.py  exceptions.py  flatten.py  insert.py  target.py
src/ska_src_maltopuft_etl/dagster/: assets.py  definitions.py
src/ska_src_maltopuft_etl/database_loader/: __init__.py  database_loader.py
src/ska_src_maltopuft_etl/meertrap/: __init__.py  load.py  main.py  meertrap.py
src/ska_src_maltopuft_etl/meertrap/candidate/: extract.py  models.py  targets.py  transform.py
src/ska_src_maltopuft_etl/meertrap/observation/: constants.py  extract.py  models.py  targets.py  transform.py
src/ska_src_maltopuft_etl/meertrap/utils/: __init__.py  coordinate_transformation.py
src/ska_src_maltopuft_etl/target_handler/: target_handler.py
src/ska_src_maltopuft_etl/utils/: __init__.py  coordinate.py  hash.py
tests/: test_map_keys.py  test_sample.py
